tests/ui/const-generics/defaults/wfness.stderr
error[E0080]: attempt to compute `u8::MAX + 1_u8`, which would overflow
  --> $DIR/wfness.rs:1:33
   |
LL | struct Ooopsies<const N: u8 = { u8::MAX + 1 }>;
   |                                 ^^^^^^^^^^^ evaluation of `Ooopsies::{constant#0}` failed here

error[E0277]: the trait bound `(): Trait<2>` is not satisfied
  --> $DIR/wfness.rs:8:9
   |
LL |     (): Trait<N>;
   |         ^^^^^^^^ the trait `Trait<2>` is not implemented for `()`
   |
   = help: the trait `Trait<2>` is not implemented for `()`
           but trait `Trait<3>` is implemented for it
note: required by a bound in `WhereClause`
  --> $DIR/wfness.rs:8:9
   |
LL | struct WhereClause<const N: u8 = 2>
   |        ----------- required by a bound in this struct
LL | where
LL |     (): Trait<N>;
   |         ^^^^^^^^ required by this bound in `WhereClause`

error[E0277]: the trait bound `(): Trait<1>` is not satisfied
  --> $DIR/wfness.rs:18:13
   |
LL | fn foo() -> DependentDefaultWfness {
   |             ^^^^^^^^^^^^^^^^^^^^^^ the trait `Trait<1>` is not implemented for `()`
   |
   = help: the trait `Trait<1>` is not implemented for `()`
           but trait `Trait<3>` is implemented for it
note: required by a bound in `WhereClause`
  --> $DIR/wfness.rs:8:9
   |
LL | struct WhereClause<const N: u8 = 2>
   |        ----------- required by a bound in this struct
LL | where
LL |     (): Trait<N>;
   |         ^^^^^^^^ required by this bound in `WhereClause`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0080, E0277.
For more information about an error, try `rustc --explain E0080`.
